force-app/main/default/objects/BLN_IdentifyDamageAssessment__mdt/BLN_IdentifyDamageAssessment__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata is used to store images with its holeid</description>
    <label>Identify Damage Assessment</label>
    <pluralLabel>Identify Damage Assessment</pluralLabel>
</CustomObject>