force-app/main/default/objects/BLN_IdentifyDamageAssessment__mdt/fields/BLN_Column__c.field-meta.xml
<CustomField>
    <fullName>BLN_Column__c</fullName>
    <description>This field is used to identify column in grid</description>
    <label>Column</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>