force-app/main/default/objects/BLN_IdentifyDamageAssessment__mdt/fields/BLN_GlassName__c.field-meta.xml
<CustomField>
    <fullName>BLN_GlassName__c</fullName>
    <label>Glass Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>