force-app/main/default/objects/BLN_IdentifyDamageAssessment__mdt/fields/BLN_HoleId__c.field-meta.xml
<CustomField>
    <fullName>BLN_HoleId__c</fullName>
    <description>This field is used to store HoleId</description>
    <label>Hole Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>