force-app/main/default/objects/BLN_IdentifyDamageAssessment__mdt/fields/BLN_IsActive__c.field-meta.xml
<CustomField>
    <fullName>BLN_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for active vehicle schematic image</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>