force-app/main/default/objects/BLN_IdentifyDamageAssessment__mdt/fields/BLN_IsImage__c.field-meta.xml
<CustomField>
    <fullName>BLN_IsImage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is boolean field to hide and show image</description>
    <label>Is Image</label>
    <type>Checkbox</type>
</CustomField>