force-app/main/default/objects/BLN_IdentifyDamageAssessment__mdt/fields/BLN_Row__c.field-meta.xml
<CustomField>
    <fullName>BLN_Row__c</fullName>
    <description>This field is used to identify row in grid</description>
    <label>Row</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>