force-app/main/default/objects/BLN_IdentifyDamageAssessment__mdt/fields/BLN_StaticResourceName__c.field-meta.xml
<CustomField>
    <fullName>BLN_StaticResourceName__c</fullName>
    <label>Static Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>